test/FAIL/dispcmd/to_many_arguments/01_test_disp.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="to many arguments"
#-------

disp reg all 1
